# Disable automatic dependency tracking if using other tools than gcc and gmake
#AUTOMAKE_OPTIONS = no-dependencies

nodist_pkginclude_HEADERS = speex_config_types.h

pkginclude_HEADERS = speex.h speex_bits.h speex_buffer.h speex_callbacks.h \
	speex_echo.h speex_header.h speex_jitter.h speex_preprocess.h speex_resampler.h \
	speex_stereo.h speex_types.h

